fix whitespace on profiles screen at certain resolutions

--- a/src/index.css
+++ b/src/index.css
@@ -331,7 +331,7 @@ body {
 }
 
 #defender div.body {
-  height: 100vw;
+  height: 100%;
   background-color: black;
 }
 
